terraform/main_project/security_groups.tf
# Security Group for EC2 instance (App Server)
resource "aws_security_group" "app_sg" {
  name        = "app-server-sg"
  description = "Allow HTTP from ALB and SSH from anywhere"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "Allow HTTP from ALB"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # TODO: update to security_groups = [module.alb.security_group_id]
  }

  ingress {
    description = "Allow SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # TODO: update to security_groups = [module.alb.security_group_id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "app-server-sg"
  }
}
